--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
 	},
 	"dependencies": {
 		"@discordjs/opus": "^0.9.0",
+		"@discordjs/voice": "^0.16.0",
 		"discord.js": "^14.9.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"ffmpeg": "^0.0.4",
 		"fluent-ffmpeg": "^2.1.2",
+		"play-dl": "^1.9.6",
 		"yt-search": "^2.10.4",
 		"ytdl-core": "^4.11.4"
 	},
@@ -24,7 +26,15 @@
 		"@types/express": "^4.17.17",
 		"@types/ffmpeg": "^1.0.4",
 		"@types/fluent-ffmpeg": "^2.1.21",
+		"@types/node": "^18.15.11",
 		"@types/yt-search": "^2.3.2",
-		"tsx": "^3.12.6"
+		"@typescript-eslint/eslint-plugin": "^5.58.0",
+		"@typescript-eslint/parser": "^5.58.0",
+		"eslint": "^8.38.0",
+		"eslint-plugin-sort-keys-fix": "^1.1.2",
+		"ffmpeg-static": "^5.1.0",
+		"libsodium-wrappers": "^0.7.11",
+		"tsx": "^3.12.6",
+		"typescript": "^5.0.4"
 	}
 }
