chore(env example): adding new keys to env example file

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,15 @@
 #BOT Config
-PORT=8800
+PORT=
 CLIENT_ID=
 CLIENT_SECRET=
 BOT_TOKEN=
+BOT_PREFIX=
 
 # BOT MESSAGES
-BOT_PREFIX=@
-INVALID_COMMAND=INVALID COMMAND
+INVALID_COMMAND=
 NOT_IN_A_VOICE_CHANNEL=
 NO_PERMISSION_JOIN_SPEAK=
+INVALID_INPUT_MESSAGE=
+CURRENT_PLAYING=
+MUSIC_STOPPED=
+MUSIC_RESUMED=
