--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
 	"include": ["./src/**/*.ts", "./**/*.json"],
 
 	"compilerOptions": {
-		"module": "ES2022",
-		"moduleResolution": "Node",
+		"module": "commonjs",
 		"declaration": true,
 		"removeComments": false,
 		"emitDecoratorMetadata": true,
@@ -26,7 +25,7 @@
 		"noFallthroughCasesInSwitch": false,
 		"outDir": "./dist",
 		"paths": {
-			"@src/*": ["./src/*"]
+			"@src/*": ["src/*"]
 		},
 		"types": ["node"]
 	},
