feat: redis connection at upstash

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ CLIENT_SECRET=
 BOT_TOKEN=
 BOT_PREFIX=
 
+# DATABASE
+REDIS_TOKEN=
+REDIS_URL=
+
 # BOT MESSAGES
 INVALID_COMMAND=
 NOT_IN_A_VOICE_CHANNEL=
