--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
 	"dependencies": {
 		"@discordjs/opus": "^0.9.0",
 		"@discordjs/voice": "^0.16.0",
+		"@upstash/redis": "^1.20.3",
 		"discord.js": "^14.9.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"ffmpeg": "^0.0.4",
 		"fluent-ffmpeg": "^2.1.2",
+		"isomorphic-fetch": "^3.0.0",
 		"play-dl": "^1.9.6",
 		"yt-search": "^2.10.4",
 		"ytdl-core": "^4.11.4"
@@ -28,6 +30,7 @@
 		"@types/express": "^4.17.17",
 		"@types/ffmpeg": "^1.0.4",
 		"@types/fluent-ffmpeg": "^2.1.21",
+		"@types/isomorphic-fetch": "^0.0.36",
 		"@types/node": "^18.15.11",
 		"@types/yt-search": "^2.3.2",
 		"@typescript-eslint/eslint-plugin": "^5.58.0",
