--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@discordjs/opus": "^0.9.0",
 		"@discordjs/voice": "^0.16.0",
+		"@sentry/node": "^7.49.0",
 		"@upstash/redis": "^1.20.3",
 		"discord.js": "^14.9.0",
 		"dotenv": "^16.0.3",
