--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@discordjs/voice": "^0.16.0",
 		"@sentry/node": "^7.49.0",
 		"@upstash/redis": "^1.20.3",
+		"dayjs": "^1.11.7",
 		"discord.js": "^14.9.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
@@ -23,6 +24,7 @@
 		"fluent-ffmpeg": "^2.1.2",
 		"isomorphic-fetch": "^3.0.0",
 		"play-dl": "^1.9.6",
+		"winston": "^3.8.2",
 		"yt-search": "^2.10.4",
 		"ytdl-core": "^4.11.4"
 	},
@@ -33,6 +35,7 @@
 		"@types/fluent-ffmpeg": "^2.1.21",
 		"@types/isomorphic-fetch": "^0.0.36",
 		"@types/node": "^18.15.11",
+		"@types/winston": "^2.4.4",
 		"@types/yt-search": "^2.3.2",
 		"@typescript-eslint/eslint-plugin": "^5.58.0",
 		"@typescript-eslint/parser": "^5.58.0",
