--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 		"build": "yarn tsc",
 		"lint": "eslint . --fix",
 		"format": "prettier --config .prettierrc './**/*.ts' --write",
-		"test": "ava",
-		"test-coverage": "c8 ava"
+		"test": "vitest",
+		"coverage": "vitest --coverage",
+		"coverage-web": "http-server -o -p 3333 ./coverage"
 	},
 	"dependencies": {
 		"@discordjs/opus": "^0.9.0",
@@ -43,17 +44,20 @@
 		"@types/yt-search": "^2.3.2",
 		"@typescript-eslint/eslint-plugin": "^5.58.0",
 		"@typescript-eslint/parser": "^5.58.0",
+		"@vitest/coverage-istanbul": "^0.30.1",
 		"ava": "^5.2.0",
 		"c8": "^7.13.0",
 		"eslint": "^8.38.0",
 		"eslint-plugin-sort-keys-fix": "^1.1.2",
 		"ffmpeg-static": "^5.1.0",
+		"http-server": "^14.1.1",
 		"libsodium-wrappers": "^0.7.11",
 		"prettier": "^2.8.7",
 		"sinon": "^15.0.3",
 		"ts-node": "^10.9.1",
 		"tsx": "^3.12.6",
-		"typescript": "^5.0.4"
+		"typescript": "^5.0.4",
+		"vitest": "^0.30.1"
 	},
 	"ava": {
 		"files": [
