--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"format": "prettier --config .prettierrc './**/*.ts' --write",
 		"test": "vitest",
 		"coverage": "vitest --coverage",
-		"coverage-web": "http-server -o -p 3333 ./coverage"
+		"coverage-web": "http-server -o -p 3333 ./coverage",
+		"coverage-all": "concurrently  \"yarn run coverage\" \"yarn run coverage-web\" "
 	},
 	"dependencies": {
 		"@discordjs/opus": "^0.9.0",
@@ -47,12 +48,14 @@
 		"@vitest/coverage-istanbul": "^0.30.1",
 		"ava": "^5.2.0",
 		"c8": "^7.13.0",
+		"concurrently": "^8.2.0",
 		"eslint": "^8.38.0",
 		"eslint-plugin-sort-keys-fix": "^1.1.2",
 		"ffmpeg-static": "^5.1.0",
 		"http-server": "^14.1.1",
 		"libsodium-wrappers": "^0.7.11",
 		"prettier": "^2.8.7",
+		"supertest": "^6.3.3",
 		"ts-node": "^10.9.1",
 		"tsx": "^3.12.6",
 		"typescript": "^5.0.4",
