refactor(src, test): refactoring some eslint issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
 			"@src/*": ["src/*"],
 			"@test/*": ["test/*"]
 		},
-		"types": ["node", "@types/jest"]
+		"types": ["node"]
 	},
 
 	"ts-node": {
