--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-	"semi": true,
-	"singleQuote": true,
-	"trailingComma": "all",
-	"tabWidth": 2,
-	"useTabs": true
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": false,
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "eslintIntegration": true,
+  "printWidth": 80
 }
