--- a/package.json
+++ b/package.json
@@ -1,82 +1,84 @@
 {
-	"name": "marli-music",
-	"version": "1.0.0",
-	"description": "Marli Marlete discord bot music",
-	"main": "index.js",
-	"author": "badaueba",
-	"license": "MIT",
-	"scripts": {
-		"start": "tsx src/index.ts",
-		"start:watch": "tsx watch src/index.ts",
-		"build": "yarn tsc",
-		"lint": "eslint . --fix",
-		"format": "prettier --config .prettierrc './**/*.ts' --write",
-		"test": "vitest",
-		"coverage": "vitest --coverage",
-		"coverage-web": "http-server -o -p 3333 ./coverage",
-		"coverage-all": "concurrently  \"yarn run coverage\" \"yarn run coverage-web\" "
-	},
-	"dependencies": {
-		"@discordjs/opus": "^0.9.0",
-		"@discordjs/voice": "^0.16.0",
-		"@sentry/node": "^7.49.0",
-		"@upstash/redis": "^1.20.3",
-		"dayjs": "^1.11.7",
-		"discord.js": "^14.9.0",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"ffmpeg": "^0.0.4",
-		"fluent-ffmpeg": "^2.1.2",
-		"http": "^0.0.1-security",
-		"isomorphic-fetch": "^3.0.0",
-		"play-dl": "^1.9.6",
-		"winston": "^3.8.2",
-		"yt-search": "^2.10.4",
-		"ytdl-core": "^4.11.4"
-	},
-	"devDependencies": {
-		"@types/express": "^4.17.17",
-		"@types/ffmpeg": "^1.0.4",
-		"@types/fluent-ffmpeg": "^2.1.21",
-		"@types/isomorphic-fetch": "^0.0.36",
-		"@types/node": "^18.15.12",
-		"@types/sinon": "^10.0.14",
-		"@types/winston": "^2.4.4",
-		"@types/yt-search": "^2.3.2",
-		"@typescript-eslint/eslint-plugin": "^5.58.0",
-		"@typescript-eslint/parser": "^5.58.0",
-		"@vitest/coverage-istanbul": "^0.30.1",
-		"ava": "^5.2.0",
-		"c8": "^7.13.0",
-		"concurrently": "^8.2.0",
-		"eslint": "^8.38.0",
-		"eslint-plugin-sort-keys-fix": "^1.1.2",
-		"ffmpeg-static": "^5.1.0",
-		"http-server": "^14.1.1",
-		"libsodium-wrappers": "^0.7.11",
-		"prettier": "^2.8.7",
-		"supertest": "^6.3.3",
-		"ts-node": "^10.9.1",
-		"tsx": "^3.12.6",
-		"typescript": "^5.0.4",
-		"vitest": "^0.30.1"
-	},
-	"ava": {
-		"files": [
-			"./test/**/*.test.ts"
-		],
-		"verbose": true,
-		"concurrency": 5,
-		"failFast": true,
-		"environmentVariables": {
-			"BOT_TOKEN": "TEST_TOKEN",
-			"BOT_PREFIX": "/"
-		},
-		"extensions": [
-			"ts"
-		],
-		"nodeArguments": [
-			"--loader=ts-node/esm"
-		]
-	}
+  "name": "marli-music",
+  "version": "1.0.0",
+  "description": "Marli Marlete discord bot music",
+  "main": "index.js",
+  "author": "badaueba",
+  "license": "MIT",
+  "scripts": {
+    "start": "tsx src/index.ts",
+    "start:watch": "tsx watch src/index.ts",
+    "build": "yarn tsc",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
+    "format": "prettier --config .prettierrc './**/*.ts' --write",
+    "test": "vitest",
+    "coverage": "vitest --coverage",
+    "coverage-web": "http-server -o -p 3333 ./coverage",
+    "coverage-all": "concurrently  \"yarn run coverage\" \"yarn run coverage-web\" "
+  },
+  "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.0",
+    "@sentry/node": "^7.49.0",
+    "@upstash/redis": "^1.20.3",
+    "dayjs": "^1.11.7",
+    "discord.js": "^14.9.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "http": "^0.0.1-security",
+    "isomorphic-fetch": "^3.0.0",
+    "play-dl": "^1.9.6",
+    "winston": "^3.8.2",
+    "yt-search": "^2.10.4",
+    "ytdl-core": "^4.11.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/ffmpeg": "^1.0.4",
+    "@types/fluent-ffmpeg": "^2.1.21",
+    "@types/isomorphic-fetch": "^0.0.36",
+    "@types/node": "^18.15.12",
+    "@types/sinon": "^10.0.14",
+    "@types/winston": "^2.4.4",
+    "@types/yt-search": "^2.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "@vitest/coverage-istanbul": "^0.30.1",
+    "ava": "^5.2.0",
+    "c8": "^7.13.0",
+    "concurrently": "^8.2.0",
+    "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
+    "ffmpeg-static": "^5.1.0",
+    "http-server": "^14.1.1",
+    "libsodium-wrappers": "^0.7.11",
+    "prettier": "^2.8.8",
+    "prettier-eslint": "^15.0.1",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.6",
+    "typescript": "^5.0.4",
+    "vitest": "^0.30.1"
+  },
+  "ava": {
+    "files": [
+      "./test/**/*.test.ts"
+    ],
+    "verbose": true,
+    "concurrency": 5,
+    "failFast": true,
+    "environmentVariables": {
+      "BOT_TOKEN": "TEST_TOKEN",
+      "BOT_PREFIX": "/"
+    },
+    "extensions": [
+      "ts"
+    ],
+    "nodeArguments": [
+      "--loader=ts-node/esm"
+    ]
+  }
 }
