--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 2,
-  "semi": false,
-  "singleQuote": true,
-  "bracketSpacing": true,
-  "eslintIntegration": true,
-  "printWidth": 80
+	"trailingComma": "es5",
+	"tabWidth": 2,
+	"semi": true,
+	"singleQuote": true,
+	"bracketSpacing": true,
+	"eslintIntegration": true,
+	"printWidth": 80
 }
