--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
     "format": "prettier --config .prettierrc './**/*.ts' --write",
+    "lit:format": "concurrently \"yarn run format\" \"yarn run lint:fix\"",
     "test": "vitest",
     "coverage": "vitest --coverage",
-    "coverage-web": "http-server -o -p 3333 ./coverage",
-    "coverage-all": "concurrently  \"yarn run coverage\" \"yarn run coverage-web\" "
+    "coverage:web": "http-server -o -p 3333 ./coverage",
+    "coverage:all": "concurrently  \"yarn run coverage\" \"yarn run coverage:web\" "
   },
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
@@ -54,7 +55,9 @@
     "eslint-config-prettier": "^8.8.0",
     "ffmpeg-static": "^5.1.0",
     "http-server": "^14.1.1",
+    "husky": "^8.0.3",
     "libsodium-wrappers": "^0.7.11",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
     "supertest": "^6.3.3",
@@ -63,22 +66,12 @@
     "typescript": "^5.0.4",
     "vitest": "^0.30.1"
   },
-  "ava": {
-    "files": [
-      "./test/**/*.test.ts"
-    ],
-    "verbose": true,
-    "concurrency": 5,
-    "failFast": true,
-    "environmentVariables": {
-      "BOT_TOKEN": "TEST_TOKEN",
-      "BOT_PREFIX": "/"
-    },
-    "extensions": [
-      "ts"
-    ],
-    "nodeArguments": [
-      "--loader=ts-node/esm"
-    ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "yarn run lint:format"
   }
 }
