--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,6 @@
     "composite": true,
     "sourceMap": true,
     "esModuleInterop": true,
-    "baseUrl": "./src",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
@@ -23,10 +22,11 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "outDir": "./dist",
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["./*"],
-      "@src/*": ["src/*"],
-      "@test/*": ["test/*"]
+      "@/*": ["./src/*"],
+      "@src/*": ["./src/*"],
+      "@test/*": ["./test/*"]
     },
     "types": ["node"]
   },
