--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "express": "^4.18.2",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.2",
+    "genius-lyrics-ts": "^0.2.4",
     "http": "^0.0.1-security",
     "play-dl": "^1.9.6",
+    "songlyrics": "^2.4.5",
     "winston": "^3.8.2",
     "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.4"
